Patch Khmer's faith and food from aqueduct and extra farm yields from adjacency. #5